test/tests/stages/8_loops/valid/do_while.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[31]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(1)
  ;
  do
  {
  identifier(a)
  =
  identifier(a)
  *
  const int(2)
  ;
  }
  while
  (
  identifier(a)
  <
  const int(11)
  )
  ;
  return
  identifier(a)
  ;
  }
