test/tests/stages/8_loops/invalid_parse/statement_in_condition.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[16]:
  int
  identifier(main)
  (
  void
  )
  {
  while
  (
  int
  identifier(a)
  )
  {
  const int(2)
  ;
  }
  }
